--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
-  - type: static
+  - type: web
     name: edsystem-frontend
     env: static
-    buildCommand: npm run build
-    publishPath: dist
     rootDir: frontend
+    buildCommand: npm install && npm run build
+    publishPath: dist
