--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -87,7 +87,7 @@ nbconvert==7.16.4
 nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook_shim==0.2.4
-numpy==1.26.4
+numpy>=1.24.0,<2.0.0
 opencv-python==4.10.0.84
 opt_einsum==3.4.0
 optree==0.14.1
@@ -112,7 +112,6 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==2.0.7
 pytz==2024.1
-pywin32==306
 pywinpty==2.0.13
 PyYAML==6.0.1
 pyzmq==26.0.3
